--- a/_config.yml
+++ b/_config.yml
@@ -161,7 +161,8 @@ content:
       - [MGJUG - S60 para Java - MSA e Java ME em Smartphones](https://www.guj.com.br/t/mgjug-tech-meeting-evento-gratuito-em-bh/254261)
       - [Blockchain Solution Architecture for retraced.co](https://www.linkedin.com/feed/update/urn:li:activity:6512212464250167296/)    
       - [DFJUG - Marathon for Java (M4J) - Java Certification Preparation Course - Technical English for Java Developers](https://www.flickr.com/photos/15201803@N00/albums/72157678473199848)
-      
+      - [UFLA - Federal University of Lavras - 9th Computing Week - Mobile Application Development](https://www.flickr.com/photos/15201803@N00/8550743962/in/album-72157632977371930/)
+
   
   - title: Content - blog posts, slide decks, articles
     layout: text
@@ -276,6 +277,7 @@ content:
       - [Certified Java Business Component Developer - EJB 3.x](https://www.flickr.com/photos/15201803@N00/8549639667/in/dateposted-public/)
       - [Java Instructor - Fundamentals, Advanced and JSP (Java Server Pages)](https://juarezjunior.medium.com/whats-a-developer-advocate-845e6bfdd53d)
       - [JBoss Middleware Placement Exam](https://www.flickr.com/photos/15201803@N00/8549640709/in/dateposted-public/) 
+      - [JBoss Performance Tunning](https://www.flickr.com/photos/15201803@N00/8549644725/in/album-72157632977371930/)
       - [IBM Certified Websphere Network Deployment (ND) Administrator - V8.0](https://www.flickr.com/photos/15201803@N00/8549641167/in/dateposted-public/) 
       - [DFJUG Marathon for Java - M4J with Daniel de Oliveira](https://www.flickr.com/photos/15201803@N00/8550742598/in/dateposted-public/)
       - [Java TTT (Train the Trainer) - SAP Netweaver Java EE Application Server](https://www.flickr.com/photos/15201803@N00/8550744626/in/dateposted-public/) 
@@ -291,7 +293,29 @@ content:
       - [IBM - How to connect everything to Watson IoT Platform](https://www.flickr.com/photos/15201803@N00/34236642583/in/dateposted-public/)
       - [IBM - Bringing Chatbots to Life for your Clients](https://www.flickr.com/photos/15201803@N00/34236642583/in/dateposted-public/)
       - [IBM - Cloud IaaS - Aquisição Softlayer](https://www.flickr.com/photos/15201803@N00/29706180462/in/dateposted-public/)
-      - [IBM - Creating Secure Software](https://www.flickr.com/photos/15201803@N00/29706180612/in/dateposted-public/)
+      - [IBM - Security - Essentials of Secure Engineering](https://www.flickr.com/photos/15201803@N00/29706180542/in/dateposted-public/)
+      - [IBM - Security - Creating Secure Software](https://www.flickr.com/photos/15201803@N00/29706180612/in/dateposted-public/)
+      - [IBM - Lean Process Framework](https://www.flickr.com/photos/15201803@N00/29706180812/in/dateposted-public/)
+      - [Overview of CMMi and Standardization](https://www.flickr.com/photos/15201803@N00/29706180932/in/dateposted-public/)
+      - [IBM - Redbooks Peer Author Review - Creating your Mobile Business with IBM Worklight](https://www.flickr.com/photos/15201803@N00/29706181122/in/dateposted-public/)
+      - [IBM - HIPAA Overview - Health Insurance Portability and Accountability Act](https://www.flickr.com/photos/15201803@N00/29193017743/in/dateposted-public/)
+      - [IBM - HIPAA Compliance Program](https://www.flickr.com/photos/15201803@N00/34236642083/in/dateposted-public/)
+      - [IBM - HIPAA Compliance Guide - Basics](https://www.flickr.com/photos/15201803@N00/34236642203/in/dateposted-public/)
+      - [IBM - Technical Residency USA - IBM Mobile Enterprise Social Media Residency ](https://www.flickr.com/photos/15201803@N00/29819343055/in/dateposted-public/)
+      - [IBM - Building Real World Blockchain Solutions - (Not Just PoCs) - Recipes and Lessons Learnt](https://www.flickr.com/photos/15201803@N00/35006819706/in/dateposted-public/)
+      - [IBM - Making Blockchain Real for Food Industry](https://www.flickr.com/photos/15201803@N00/35047465545/in/dateposted-public/)
+      - [IBM - Blockchain in CEE](https://www.flickr.com/photos/15201803@N00/35047465585/in/dateposted-public/)
+      - [IBM - Blockchain, Criptography and Consensus](https://www.flickr.com/photos/15201803@N00/35047465715/in/dateposted-public/)
+      - [IBM - An Introduction to Blockchain Technology and the Hyperledger Project](https://www.flickr.com/photos/15201803@N00/35047465735/in/dateposted-public/)
+      - [IBM - Open Blockchain](https://www.flickr.com/photos/15201803@N00/29819343195/in/dateposted-public/)
+      - [IBM - Mobile Infrastructure Plan and Education with ITC](https://www.flickr.com/photos/15201803@N00/29706180732/in/dateposted-public/)
+      - [IBM - Horizon Watch - Cloud Computing Trends to Watch in 2016](https://www.flickr.com/photos/15201803@N00/29193017873/in/dateposted-public/)
+      - [IBM - Cloud Industry Series - Cloud for Travel](https://www.flickr.com/photos/15201803@N00/29706181062/in/dateposted-public/)
+      - [IBM - Cloud Industry Series - Cloud for Healthcare](https://www.flickr.com/photos/15201803@N00/29193017993/in/dateposted-public/)
+      - [IBM - Establishing your Brand](https://www.flickr.com/photos/15201803@N00/34236642333/in/dateposted-public/)
+      - [IBM - Technical Talent Outthink - Enabling Meaningful Work](https://www.flickr.com/photos/15201803@N00/29706180412/in/dateposted-public/)
+
+      
 
           
 # Footer
