--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,10 @@ content:
       - [IBM Manager's Choice Award - 2016](https://www.flickr.com/photos/15201803@N00/35047881805/in/dateposted-public/)
       - [IBM Eminence and Performance Awards - IBM Technical Rockstar for Cloud & IBM Manager's Choice Award](https://www.linkedin.com/in/jujunior/detail/treasury/position:721362750/?entityUrn=urn%3Ali%3Afsd_profileTreasuryMedia%3A(ACoAAAQidAUBnh75F9ppFfR96-YkDay_Szo1rkk%2C1485950401575)&section=position%3A721362750&treasuryCount=3)
       - [IBM - Technical Residency RTP USA - Mobile Enterprise Social Media Residency](https://www.flickr.com/photos/15201803@N00/8549638887/in/photostream)     
+      - [IBM Hall of Fame Award - Outstanding Contribution - Build of Java's Infrastructure for IBM Beijing Data Center](https://www.flickr.com/photos/15201803@N00/8549639133/in/album-72157632977371930/)
+      - [IBM Outstanding Contribution Award - Creator of IBM Beijing Data Center Infrastructure Setup](https://www.flickr.com/photos/15201803@N00/8549639209/in/album-72157632977371930/)
+      - [IBM Outstanding Contribution Award - Creator of Java Cloud MAD Security Tool](https://www.flickr.com/photos/15201803@N00/8550738356/in/album-72157632977371930/)
+      - [IBM Hall of Fame - Client Appreciation Contribution](https://www.flickr.com/photos/15201803@N00/8549638685/in/album-72157632977371930/)
       - [Nokia Developer Wiki Administrator - Superior Community Service Award](https://www.flickr.com/photos/15201803@N00/8549638561/in/photostream)
       - [Nokia Developer Champion - 2006 - 2007](https://www.flickr.com/photos/15201803@N00/8550741480/in/set-72157632977371930)
       - [Nokia Developer Champion - 2007 - 2008](https://www.flickr.com/photos/15201803@N00/8549640289/in/set-72157632977371930)
@@ -161,8 +165,10 @@ content:
       - [MGJUG - S60 para Java - MSA e Java ME em Smartphones](https://www.guj.com.br/t/mgjug-tech-meeting-evento-gratuito-em-bh/254261)
       - [Blockchain Solution Architecture for retraced.co](https://www.linkedin.com/feed/update/urn:li:activity:6512212464250167296/)    
       - [DFJUG - Marathon for Java (M4J) - Java Certification Preparation Course - Technical English for Java Developers](https://www.flickr.com/photos/15201803@N00/albums/72157678473199848)
-      - [UFLA - Federal University of Lavras - 9th Computing Week - Mobile Application Development](https://www.flickr.com/photos/15201803@N00/8550743962/in/album-72157632977371930/)
-
+      - [FAGOC - 9th Computing Week - Mobile Application Development](https://www.flickr.com/photos/15201803@N00/8550743962/in/album-72157632977371930/)
+      - [UFLA - Federal University of Lavras - Open-Source in Java](https://www.flickr.com/photos/15201803@N00/8549642843/in/album-72157632977371930/)
+      - [Guest Lecturer - Hyperledger Technology Workshop - DLT Certification Program - WBS UK](https://www.flickr.com/photos/15201803@N00/48974460052/in/album-72157632977371930/)
+      
   
   - title: Content - blog posts, slide decks, articles
     layout: text
@@ -314,6 +320,25 @@ content:
       - [IBM - Cloud Industry Series - Cloud for Healthcare](https://www.flickr.com/photos/15201803@N00/29193017993/in/dateposted-public/)
       - [IBM - Establishing your Brand](https://www.flickr.com/photos/15201803@N00/34236642333/in/dateposted-public/)
       - [IBM - Technical Talent Outthink - Enabling Meaningful Work](https://www.flickr.com/photos/15201803@N00/29706180412/in/dateposted-public/)
+      - [IBM - DataPower V5.0 Security Appliance - Administration](https://www.flickr.com/photos/15201803@N00/29705845402/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Introduction to Wearable Devices](https://www.flickr.com/photos/15201803@N00/50936210727/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - IoT Lab - Arduino](https://www.flickr.com/photos/15201803@N00/50936095201/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - IoT Lab - Raspberry Pi](https://www.flickr.com/photos/15201803@N00/50936210802/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Cloud for IoT](https://www.flickr.com/photos/15201803@N00/50936210727/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Agile Development - DevOps with Git](https://www.flickr.com/photos/15201803@N00/50935410908/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Agile Development - Docker Containers](https://www.flickr.com/photos/15201803@N00/51039509976/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Android - Jetpack and Architecture](https://www.flickr.com/photos/15201803@N00/50936210762/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Intelligence of Things Week - Data Science for Natural Sciences](https://www.flickr.com/photos/15201803@N00/50935410963/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Industry 4.0 - Fundamentals](https://www.flickr.com/photos/15201803@N00/50935410983/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Blockchain - Introduction](https://www.flickr.com/photos/15201803@N00/50935410838/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Blockchain - Ethereum Development Tools](https://www.flickr.com/photos/15201803@N00/50936210707/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Python Language - Part 1](https://www.flickr.com/photos/15201803@N00/50962341911/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Python Language - Part 2](https://www.flickr.com/photos/15201803@N00/50962341871/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Python Language - Part 3](https://www.flickr.com/photos/15201803@N00/50984880893/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - React JS - Part 1](https://www.flickr.com/photos/15201803@N00/51006715741/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - ReactJS - Part 2](https://www.flickr.com/photos/15201803@N00/50972753417/in/album-72157632977371930/)
+      - [DevOps JS Conference 2021](https://www.flickr.com/photos/15201803@N00/51114245666/in/dateposted-public/)
+      - [Terraform Training](https://www.flickr.com/photos/15201803@N00/40491238343/in/album-72157632977371930/)  
 
       
 
