CV-Tech-References

--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,9 @@ content:
       - [Microsoft TechX - Highlights by Version 1](https://www.version1.com/nw-cld-maz-highlights-from-microsoft-techx-dublin/)
       - [Microsoft TechX - Event Report by Version 1](https://medium.com/version-1/a-day-at-microsoft-techx-dublin-28a7abb71c9c)
       - [Workshop: Blockchain on Azure for Developers](https://www.microsoftevents.com/profile/form/index.cfm?PKformID=0x9650633abcd)
-      - [Hackathon WhatTheHack - Blockchain and The World Food Supply](https://www.slideshare.net/juarezjunior/whatthehack-blockchain-and-the-world-food-supply)
+      - [Guest Lecturer - Hyperledger Technology Workshop - DLT Certification Program - WBS UK](https://www.flickr.com/photos/15201803@N00/48974460052/in/album-72157632977371930/)
+      - [Introduction to Blockchain - IT in Dublin Meetup](https://www.flickr.com/photos/15201803@N00/albums/72157670950525778)
+      - [Blockchain Solution Architecture for retraced.co](https://www.linkedin.com/feed/update/urn:li:activity:6512212464250167296/)    
       - [Microsoft Developers @ NodeConf Remote 2020](https://www.nearform.com/blog/microsoft-loves-nodeconf-remote-2020/)
       - [Open Source Lisbon - The Trinity in Exponential Technologies: Open Source, Blockchain and Microsoft Azure](https://www.youtube.com/watch?v=CmKYDAO2DMQ&t=26s)
       - [Cloud Conference Day - Blockchain for Java Developers](https://www.youtube.com/watch?v=4Bj4XZqOI0k)
@@ -139,6 +141,7 @@ content:
       - [Blockchain Series - Hyperledger on Azure Blockchain](https://www.youtube.com/watch?v=3iCSU8kHZkI) 
       - [Blockchain Ireland - Developer's Working Group - Introduction to Blockchain and Blockchain on Azure](https://www.linkedin.com/feed/update/urn:li:activity:6778341966645145600/)      
       - [DynamicsPower Dublin 2019 - How to integrate Blockchain technology into your application](https://juarezjunior.medium.com/dynamicspower-dublin-2019-b0a59a6c9656)
+      - [Hackathon WhatTheHack - Blockchain and The World Food Supply](https://www.slideshare.net/juarezjunior/whatthehack-blockchain-and-the-world-food-supply)
       - [One Hackathon - Judges Panel](https://www.incubateind.com/hack/onehack/portugalandUkraine)
       - [Organizer - Blockchain SIG - Oracle EMEA](https://www.linkedin.com/feed/update/urn:li:activity:6400694651598233600/)
       - [Blockchain Summit - Blockchain Smart Contracts Development with the Oracle Blockchain Platform](https://www.techconnect-live.com/agendax/sem-block.pdf)        
@@ -155,18 +158,24 @@ content:
       - [Oracle Blockchain Experience Day - Developing Blockchain Applications](https://www.eventbrite.ie/e/oracle-blockchain-experience-day-tickets-61525581671#)
       - [4th Naftemporiki AI Conference 2019 - Panel: Artificial Intelligence vs. Human Prudence](https://www.flickr.com/photos/15201803@N00/albums/72157678467257638)
       - [Shift Conference - Devops with Azure Devops and Github](https://www.slideshare.net/shiftconf/shift-remote-devops-devops-with-azure-devops-and-github-juarez-junior-microsoft)
+      - [Oracle Cloud Technical Evangelism - Dublin Tech Summit](https://www.flickr.com/photos/15201803@N00/albums/72157699303829735)
       - [DUBJUG - The Helidon.io Project - The Collection of Java Libraries for Writing Microservices](https://ti.to/dublin-java-user-group/oracle-blockchain)
       - [DUBJUG - The Oracle Blockchain Cloud Service and Blockchain smart contracts development with Java](https://ti.to/dublin-java-user-group/oracle-blockchain)
       - [LeedsJUG - The Helidon.io Project - The Collection of Java Libraries for Writing Microservices](https://twitter.com/LeedsJUG/status/1069697969769852935)
       - [LeedsJUG - The Oracle Blockchain Cloud Service and Blockchain smart contracts development with Java](https://twitter.com/LeedsJUG/status/1088451342547308544)
       - [Webinars: Transformational Technologies of Today – Blockchain and IoT](https://www.linkedin.com/pulse/transformational-technologies-today-blockchain-iot-juarez-junior/)
+      - [Hackathon - Nokia Developer Summit in Monaco](https://www.flickr.com/photos/15201803@N00/albums/72157700041107314)
+      - [Oracle Blockchain Hackathon - Geneva, Switzerland - 2018](https://www.flickr.com/photos/15201803@N00/albums/72157698877834674)
+      - [Blocktoberfest - Demystifying Blockchain](https://eventreg.oracle.com/profile/web/index.cfm?PKwebID=0x579007abcd)
+      - [IBM Redbook Global Thought Leaders - Talk: IBM Mobile Databases](https://www.flickr.com/photos/15201803@N00/albums/72157697188449462)
       - [CONADEV - Situação e Perspectivas Tecnologias Mobile](https://www.youtube.com/watch?v=Qs8JrDFYDow)
       - [MGJUG - S60 para Java - MSA e Java ME em Smartphones](https://www.guj.com.br/t/mgjug-tech-meeting-evento-gratuito-em-bh/254261)
-      - [Blockchain Solution Architecture for retraced.co](https://www.linkedin.com/feed/update/urn:li:activity:6512212464250167296/)    
+      - [MGJUG - Java User Group - Tech Meeting @ UniBH.br](https://www.flickr.com/photos/15201803@N00/albums/72157670327333967)
       - [DFJUG - Marathon for Java (M4J) - Java Certification Preparation Course - Technical English for Java Developers](https://www.flickr.com/photos/15201803@N00/albums/72157678473199848)
       - [FAGOC - 9th Computing Week - Mobile Application Development](https://www.flickr.com/photos/15201803@N00/8550743962/in/album-72157632977371930/)
       - [UFLA - Federal University of Lavras - Open-Source in Java](https://www.flickr.com/photos/15201803@N00/8549642843/in/album-72157632977371930/)
-      - [Guest Lecturer - Hyperledger Technology Workshop - DLT Certification Program - WBS UK](https://www.flickr.com/photos/15201803@N00/48974460052/in/album-72157632977371930/)
+      
+      
       
   
   - title: Content - blog posts, slide decks, articles
