new link update

--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ content:
       Developer Relations - Presentations and Customer Engagements      
       - [DevRel - Sessionize](https://sessionize.com/juarezjunior)
       - [DevRel - Presentations](https://www.slideshare.net/juarezjunior/presentations)
-      - [DevRel - Photos](https://www.flickr.com/photos/15201803@N00/page1)
+      - [DevRel - Photos](https://www.flickr.com/photos/15201803@N00/page1)      
       - [Microsoft TechX - Enterprise Blockchain Application Development using Azure Blockchain Service](https://www.microsoftevents.com/profile/web/index.cfm?PKwebID=0x1462051d571&varPage=agenda)
       - [Microsoft TechX - Highlights by Version 1](https://www.version1.com/nw-cld-maz-highlights-from-microsoft-techx-dublin/)
       - [Microsoft TechX - Event Report by Version 1](https://medium.com/version-1/a-day-at-microsoft-techx-dublin-28a7abb71c9c)
@@ -126,6 +126,7 @@ content:
       - [Introduction to Blockchain - IT in Dublin Meetup](https://www.flickr.com/photos/15201803@N00/albums/72157670950525778)
       - [Blockchain Solution Architecture for retraced.co](https://www.linkedin.com/feed/update/urn:li:activity:6512212464250167296/)    
       - [Microsoft Developers @ NodeConf Remote 2020](https://www.nearform.com/blog/microsoft-loves-nodeconf-remote-2020/)
+      - [React Summit Remote Edition 2021](https://www.linkedin.com/feed/update/urn:li:activity:6788856965012553728/)
       - [Open Source Lisbon - The Trinity in Exponential Technologies: Open Source, Blockchain and Microsoft Azure](https://www.youtube.com/watch?v=CmKYDAO2DMQ&t=26s)
       - [Cloud Conference Day - Blockchain for Java Developers](https://www.youtube.com/watch?v=4Bj4XZqOI0k)
       - [Cloud Conference Day - Introduction to Azure Spring Cloud](https://www.linkedin.com/feed/update/urn:li:activity:6783021199669637120/)
