--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,8 @@ content:
       Developer Relations - Presentations and Customer Engagements      
       - [DevRel - Sessionize](https://sessionize.com/juarezjunior)
       - [DevRel - Presentations](https://www.slideshare.net/juarezjunior/presentations)
-      - [DevRel - Photos](https://www.flickr.com/photos/15201803@N00/page1)      
+      - [DevRel - Photos](https://www.flickr.com/photos/15201803@N00/page1) 
+      - [Blockchain on Azure for Developers](https://mktoevents.com/Microsoft+Event/272492/157-GQE-382?ocid=AID2423380_TWITTER_oo_spl100002029056646) 
       - [Microsoft TechX - Enterprise Blockchain Application Development using Azure Blockchain Service](https://www.microsoftevents.com/profile/web/index.cfm?PKwebID=0x1462051d571&varPage=agenda)
       - [Microsoft TechX - Highlights by Version 1](https://www.version1.com/nw-cld-maz-highlights-from-microsoft-techx-dublin/)
       - [Microsoft TechX - Event Report by Version 1](https://medium.com/version-1/a-day-at-microsoft-techx-dublin-28a7abb71c9c)
