--- a/_config.yml
+++ b/_config.yml
@@ -129,7 +129,7 @@ content:
       - [Introduction to Blockchain - IT in Dublin Meetup](https://www.flickr.com/photos/15201803@N00/albums/72157670950525778)
       - [Blockchain Solution Architecture for retraced.co](https://www.linkedin.com/feed/update/urn:li:activity:6512212464250167296/)    
       - [Microsoft Developers @ NodeConf Remote 2020](https://www.nearform.com/blog/microsoft-loves-nodeconf-remote-2020/)
-      - [React Summit Remote Edition 2021](https://www.linkedin.com/feed/update/urn:li:activity:6788856965012553728/)
+      - [React Summit Remote Edition 2021](https://twitter.com/ReactSummit/status/1383052138365001734)
       - [Open Source Lisbon - The Trinity in Exponential Technologies: Open Source, Blockchain and Microsoft Azure](https://www.youtube.com/watch?v=CmKYDAO2DMQ&t=26s)
       - [Cloud Conference Day - Blockchain for Java Developers](https://www.youtube.com/watch?v=4Bj4XZqOI0k)
       - [Cloud Conference Day - Introduction to Azure Spring Cloud](https://www.linkedin.com/feed/update/urn:li:activity:6783021199669637120/)
