--- a/_config.yml
+++ b/_config.yml
@@ -341,6 +341,7 @@ content:
       - [USP - University of Sao Paulo - Agile Development - DevOps with Git](https://www.flickr.com/photos/15201803@N00/50935410908/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - Agile Development - Docker Containers](https://www.flickr.com/photos/15201803@N00/51039509976/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - Android - Jetpack and Architecture](https://www.flickr.com/photos/15201803@N00/50936210762/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Android - Labs](https://www.flickr.com/photos/15201803@N00/51192176425/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - Intelligence of Things Week - Data Science for Natural Sciences](https://www.flickr.com/photos/15201803@N00/50935410963/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - Industry 4.0 - Fundamentals](https://www.flickr.com/photos/15201803@N00/50935410983/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - Blockchain - Introduction](https://www.flickr.com/photos/15201803@N00/50935410838/in/album-72157632977371930/)
