--- a/_config.yml
+++ b/_config.yml
@@ -236,7 +236,7 @@ content:
       - [Java SE 5 Language Enhancements & Features](https://www.slideshare.net/juarezjunior/java-se-5-language-enhancements-features)
       - [Java SE 7 new Language Features](https://www.slideshare.net/juarezjunior/java-se-7-new-language-features-41367128)       
       - [Introdução ao Android](https://www.slideshare.net/juarezjunior/introduo-ao-android-e-plataforma-android)
-      - [Java se 8 Language Enhancements & Features](https://www.slideshare.net/juarezjunior/java-se-8-language-enhancements-features)
+      - [Java SE 8 Language Enhancements & Features](https://www.slideshare.net/juarezjunior/java-se-8-language-enhancements-features)
       - [Java Certification - Section 7 Fundamentals](https://www.slideshare.net/juarezjunior/section-7-fundamentals)
       - [Java Certification - Section 6 Collection and Generics](https://www.slideshare.net/juarezjunior/section-6-collections-generics)
       - [Java Certification - Section 5 - OO Concepts](https://www.slideshare.net/juarezjunior/section-5-oo-concepts)
