--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ content:
         # link_text: boringcompany.com
         sub_title: Azure Developer Engagement Lead
         caption: July 2019 - Present
-        link: >
+        quote: >
           https://developer.microsoft.com/en-ie/
         description: | # this will include new lines to allow paragraphs
             Developer Engagement and Relations Lead. I oversee all the developer outreach activities including developer programs, customer and social media interactions, online and in-person events such as webinars, technical workshops, conferences, hackathons, training and certification events, local meetups, technical content creation and curation (articles and blog posts), implementation of code samples and technical guides as well as events sponsorship, organization, and promotion.
@@ -81,7 +81,7 @@ content:
         # link_text: boringcompany.com
         sub_title: Principal Developer Advocate, Product Strategy & Developer Advocacy Director - Oracle EMEA
         caption: May 2019 - July 2019
-        link: >
+        quote: >
           https://developer.oracle.com/
         description: | # this will include new lines to allow paragraphs
             
