--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ content:
         description: | # this will include new lines to allow paragraphs
 
   - title: 
-    layout: text # Type of content section (list/text)
+    layout: list # Type of content section (list/text)
     content:
       - layout: left
         title: Oracle
@@ -96,7 +96,7 @@ content:
         description: | # this will include new lines to allow paragraphs            
 
   - title: 
-    layout: text # Type of content section (list/text)
+    layout: list # Type of content section (list/text)
     content:
       - layout: left
         title: Oracle
