--- a/_config.yml
+++ b/_config.yml
@@ -468,7 +468,7 @@ content:
       - layout: left
         title: INdT - Nokia Technology Institute
         link: https://www.indt.org.br/        
-        sub_title: Senior Mobile Software Architect (Consultant)
+        sub_title: Senior Mobile Software Architect (Contractor)
         caption: May 2007 - November 2008
         quote: >
           https://www.indt.org.br/about-us
